fix navbar flexbox. deleter scrollbar

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -45,6 +45,10 @@ $site_horizontal_padding: 30px;
   @media screen and (min-width: 1200px) { @content; }
 }
 
+@mixin nav-menu-desktop {
+  @media screen and (max-width: 1199px) { @content; }
+}
+
 @mixin max-width-desktop {
   @media screen and (min-width: 1240px) { @content; }
 }
@@ -85,20 +89,23 @@ $site_horizontal_padding: 30px;
 
 @mixin animated_border_hover_state {
 
-    &:after {
-      background-color: $light_white;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    }
+    // &:after {
+    //   background-color: $light_white;
+    //   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    // }
 
-    &:hover:after {
-      width: 100%;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out;
-    }
+    // &:hover:after {
+    //   width: 100%;
+    //   box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    //   opacity: 0;
+    //   transition: opacity 0.3s ease-in-out;
+    // }
     &:hover {
-
+      background-color: $slate;
       box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      // opacity: 0.8;
+      
+      transition: background-color 0.3s ease-in-out;
     }
   
 }
